# BewiseTask2

./: .flaskenv  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: __init__.py  models.py
app/auth/: routes.py
app/main/: routes.py
migrations/versions/: a43167dcb5ab_init.py
